--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOKTYPE html>
+<!DOCTYPE html>
 <html dir="ltr" lang="en">
     <head>
         <title>transform_EX2</title>
@@ -6,14 +6,15 @@
         <link rel="stylesheet" href="transform_EX2.css" type="text/css">
     </head>
     <body>
+        <!-- start section -->
         <section>
-            <!-- <div class="container"> -->
-                <div class="square_1"></div>
-                <div class="content_botttom">
-                    <div class="rectangle_2"></div>
-                    <div class="rectangle_3"></div>
-                </div>
-            <!-- </div> -->
+            <div class="square_1"></div>
+            <!-- start content_bottom -->
+            <div class="content_botttom">
+                <!-- start rectangle 2-3 -->
+                <div class="rectangle_2"></div>
+                <div class="rectangle_3"></div>
+            </div>
         </section>
     </body>
 </html>
